<resources>
    <string name="app_name">MikuyApp</string>
    <!-- Menu Entry Options-->
    <string name="signup">Registrarse</string>
    <string name="signin">Iniciar Sesión</string>
    <string name="titleApp">Señor de Muruhuay</string>
    <string name="email">Correo Electrónico</string>
    <string name="passwoord">Contraseña</string>
    <string name="helpPassword">¿Olvidó su contraseña?</string>
    <string name="hereClick">Click Aqui</string>
    <string name="connectToFacebook">Conectar con Facebook</string>
    <string name="connectToTwitter">Conectar con Twiter</string>
    <!-- SignUp-->
    <string name="registerNow">Registrate Ahora</string>
    <string name="name">Nombres</string>
    <string name="lastName">Apellidos</string>
    <string name="or">O</string>
    <!--Menu options -->
    <string name="menu">Menu del día</string>
    <string name="foodLetter">Carta de platos</string>
    <string name="myReservations">Mis reservas</string>
    <string name="contacts">Contactanos</string>
    <string name="address">Dirección</string>
    <string name="userProfile">Perfil de usuario</string>
    <string name="signof">Cerrar sesión</string>
    <string name="addressOfThePlace">Av. Tomas Marzano 356</string>
    <string name="city">Lima, Perú</string>
    <!--Menu Today -->
    <string name="entry">Entrada</string>
    <string name="backgroundPlate">Plato de fondo</string>
    <string name="dessert">Postres</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="formatPrice">s/ %.2f</string>
    <string name="reserve">Realizar Reserva</string>
    <string name="amount">Monto:</string>
    <string name="reservation">Reservación</string>
    <string name="reservationNumber"> &lt;b>Número de reserva:&lt;/b> %1$s</string>
    <string name="reservationDate">&lt;b>Fecha y hora:&lt;/b> %1$s</string>
    <string name="OrderList">Lista de pedidos</string>
    <string name="makePayment">Realizar pago</string>
    <string name="AmountReservation">Total:</string>
    <string name="titleDialogSend">Enviar email a MikuyApp</string>
    <string name="subjectSendEmail">Contacto a MikuyApp</string>
    <string name="title_activity_address_maps">Map</string>
    <string name="nameRestaurant">MikuyRestaurant</string>
    <string name="startUbication">&lt;b>Mi ubicación&lt;/b> (%1$s)</string>
    <string name="endUbication">&lt;b>Restaurant&lt;/b> (%1$s)</string>
    <string name="titleStart">Mi ubicación</string>
    <string name="titleEnd">Señor de Muruhuay</string>
    <string name="reload">RECARGAR</string>
    <string name="errorApiDireccions">Error interno de servidor ApiGoogleDirections</string>
    <string name="errorNetwoork">Error de conexión,verifíque su conexión red Wi-Fi o Datos</string>
    <string name="errorSettingsLocation">Habilite algún proveedor de localización(GPS)</string>
    <string name="settings">Ajustes</string>
    <string name="permissionRationale">Para poder acceder a su ubicación, debe de conceder permisos</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="gender">Genero</string>
    <!--Message of the serve -->
    <string name="emptyName">El nombre no puede ser vacio</string>
    <string name="emptyLastName">Los apellidos no pueden ser vacios</string>
    <string name="emptyEmail">El email no puede ser vacio</string>
    <string name="errorConnectionServer">Error de conexión con  %1$s</string>
    <string name="emptyGender">Seleccione alguna opción de genero</string>
    <string name="noFormatEmail">La dirección de correo no es válida</string>
    <string name="emptyPassword">La contraseña no puede ser vacia</string>
    <string name="shortPassword">La contraseña ingresada de muy corta (mínimo 6 caracteres)</string>
    <string name="emptyBackgroundPlate">Seleccione el PLATO DE FONDO</string>
    <string name="emptyDessert">Seleccione el POSTRE del menu</string>
    <string name="emptyEntry">Seleccione la ENTRADA del menu</string>
    <string name="emptyListLetterReserver">Seleccione al menos 1 platillo para realiazar la reserva</string>

    <!--DialogScan -->
    <string name="startScann">Iniciar escaner</string>
    <string name="progressScan">%1$d %2$s Detener</string>
    <string name="stoptScanExecute">Detener escaner</string>
    <string name="scanTitleScan">Dirección IP actual:</string>
    <string name="newScanTitleScan">Direccón IP nueva:</string>
    <string name="dialogTitle">&lt;b>RED:&lt;/b>\"%1$s\"</string>
    <string name="wifi_enabling">Habilitando Wifi..</string>
    <string name="wifi_desabling">Desconectando Wifi..</string>
    <string name="wifi_enabled">Wifi Habilitado</string>
    <string name="ipAddress">IP: </string>
    <string name="network">RED: </string>
    <string name="cancelScanner">Se canceló el escaneo de direcciones IP</string>
    <string name="wifi_desabled">Wifi Desabilitado</string>
    <string name="wifi_unknown">Wifi Apagado</string>
    <string name="wifi_scanning">Escaneando redes..</string>
    <string name="wifi_associating">Asociando a %1$s</string>
    <string name="wifi_completed">Obteniendo IP de %1$s</string>
    <string name="wifi_net_ip">Conectado a %1$s \nIP: %2$s \nRED: %3$s /%4$d</string>
    <string name="wifi_detect_internet">Conectividad de internet detectata!</string>
    <string name="scan_wifi_title">Cambio de dirección IP</string>
    <string name="scan_hold">Cambiar IP manualmente</string>
    <string name="emptyDispositive">No se encontró ningún dispositivo en red</string>
    <string name="save">guardar</string>
    <string name="saveSuccessIpAddress">Dirección IP: %1$s \n correctamente guardada</string>
</resources>
