<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:orientation="vertical"
    tools:theme="@style/AppTheme.ScannerStyle">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/scan_wifi_title"
            app:titleTextAppearance="@style/styleTitleToolbar"
            app:titleTextColor="@color/colorWhite" />

        <LinearLayout
            android:id="@+id/llInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ralewaybold"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:text="@string/scanTitleScan" />

            <TextView
                android:id="@+id/tvServerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ralewayregular"
                android:gravity="center"
                android:textSize="15sp"
                tools:text="192.168.10.1" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvHostScan"
        style="@style/recyclerScrollStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlButtons"
        android:layout_below="@+id/appbar"
        android:layout_margin="12dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/row_host" />

    <RelativeLayout
        android:id="@+id/rlButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvWifiState"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/selector_signup"
            android:enabled="false"
            android:fontFamily="@font/ralewaybold"
            android:gravity="center"
            android:text="@string/startScann"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/selector_stop"
            android:fontFamily="@font/ralewaybold"
            android:gravity="center"
            android:text="@string/stoptScanExecute"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:visibility="invisible" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvWifiState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorExpire"
        android:fontFamily="@font/ralewayregular"
        android:padding="12dp"
        android:text="@string/wifi_desabled"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/pbProgress"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:visibility="gone" />


</RelativeLayout>