<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlAddress"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/address"
            app:titleTextColor="@color/colorWhite">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/pbLoad"
                    android:layout_toStartOf="@+id/pbLoad"
                    android:gravity="center_vertical"
                    android:text="@string/address" />

                <ProgressBar
                    android:id="@+id/pbLoad"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingLeft="0dp"
            android:paddingRight="16dp"
            android:paddingStart="0dp">

            <View
                android:id="@+id/v1"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_circle_location" />

            <TextView
                android:id="@+id/tvStartUbication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/v1"
                android:layout_toRightOf="@+id/v1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/titleStart"
                android:textColor="@android:color/white" />

            <View
                android:id="@+id/v2"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_below="@+id/v1"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/shape_circle_location_trans" />

            <View
                android:id="@+id/v3"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_below="@+id/v2"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/shape_circle_location_trans" />


            <ImageView
                android:id="@+id/ivMarker"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_below="@+id/v3"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/ic_destination"
                android:tint="@color/colorGreen" />

            <TextView
                android:id="@+id/tvEndUbication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v3"
                android:layout_toEndOf="@+id/ivMarker"
                android:layout_toLeftOf="@+id/ivBus"
                android:layout_toRightOf="@+id/ivMarker"
                android:layout_toStartOf="@+id/ivBus"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/titleEnd"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/ivBus"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_below="@+id/v3"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_toLeftOf="@+id/tvTime"
                android:layout_toStartOf="@+id/tvTime"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/bus_64"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/v3"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="mins"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        tools:context=".address.ui.AddressMapsActivity" />

</RelativeLayout>
